add gender and finger

--- a/views/partials/add-user-modal.ejs
+++ b/views/partials/add-user-modal.ejs
@@ -35,6 +35,18 @@
               <p class="error name-error"></p>
             </div>
           </label>
+          <label for="gender">
+            Gender
+            <div class="">
+              <select name="gender" id="gender">
+                <option disabled selected>Select Gender</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
+              </select>
+              <p class="error select-error"></p>
+            </div>
+          </label>
           <label for="email">
             Email
             <div class="">
