count unpaid leave

--- a/views/pages/leavedays.ejs
+++ b/views/pages/leavedays.ejs
@@ -87,7 +87,7 @@
           <table class="work">
             <tr>
               <td>Leave limit:</td>
-              <td><%= totalLeaveDayLimit || 0 %><span class="high"><%= Number((totalLeaveDayLimit || 0) - (countLeave || 0))  %> </span></td>
+              <td><%= totalLeaveDayLimit || 0 %><span class="high"><%= Number((totalLeaveDayLimit || 0) - (getTotalLeave || 0))  %> </span></td>
             </tr>
           
             <% leaveLimitReport.map(el =>  {%>
