--- a/views/pages/leavedays.ejs
+++ b/views/pages/leavedays.ejs
@@ -93,7 +93,7 @@
             <% leaveLimitReport.map(el =>  {%>
             <tr>
               <td><%= el.leaveName || '' %>:</td>
-              <td><%= el.duration || 0 %></td>
+              <td><%= el.duration || 0 %><small><span style="font-size:8px;" class="<%= el.leaveName == 'unpaid' ? 'low' : '' %> "><%= el.leaveName == 'unpaid' ? 'limit not allowed' : '' %> </span></small></td>
             </tr>
             <% }) %> 
        
