--- a/public/assets/css/LineIcons.css
+++ b/public/assets/css/LineIcons.css
@@ -171,7 +171,7 @@
 .lni-cog:before {
   content: "\e92d";
 }
-.lni-dashboard:before {
+.lni-home:before {
   content: "\e92e";
 }
 .lni-folder:before {
