--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -1,150 +1,8 @@
 <%- include("../partials/header"); -%>
-<div id="dashboard">
-  <div class="dashboard-head">
-    <div class="oclock-box">
-      <div class="time-box">
-        <div class="current-time">
-          <h5 class="time">00:00</h5>
-          <span class="time-meridiem"></span>
-        </div>
-        <div class="current-date">Mon 22 Oct</div>
-      </div>
-      <div class="start-details">
-        <table>
-          <tr>
-            <td>Started at:</td>
-            <td id="todayStart"><%=start || '00 : 00'%></td>
-          </tr>
-          <tr>
-            <td>Ended at:</td>
-            <td id="todayEnd"><%=end || '00 : 00'%></td>
-          </tr>
-          <tr>
-            <td>TotalWork Time:</td>
-            <td id="todayTotal"><%= todayTotal %></td>
-          </tr>
-          <tr>
-            <td>Break:</td>
-            <td id="breakTime"><%=breakTime %></td>
-          </tr>
-        </table>
-      </div>
-      <div class="counter" id="elapsedTime">00:00:00</div>
-      <div class="button">
-        <div id="end-btn" style="display: none">
-          <%- include("../partials/icons/stop-svg"); -%>
-        </div>
-        <%- include("../partials/start-modal"); -%>
-        <div id="start-btn" class="add-button play">
-          <%- include("../partials/icons/play-svg"); -%>
-        </div>
-      </div>
-    </div>
-  </div>
+<style>
 
-  <div id="dashboard-info" class="dashboard-info <%=checkTodayReportEmptyOrNot.length !== 0 ? '' : 'dashboard-none' %>">
-    <div class="scroll-table">
-      <table class="dashboard-reports"  >
-        <thead>
-          <tr>
-            <td class="project-name">Project Name</td>
-            <td class="project-work">Work details</td>
-            <td>Start</td>
-            <td>End</td>
-            <td>Total</td>
-          </tr>
-        </thead>
+</style>
+<div class="main">
   
-        <tbody id="todayReport" class="dashboard-reports-tbody">
-  
-          <!---- Today details condition check --> 
-  
-          <% today.map(today=>{ %>
-          <tr>
-            <td class="project-name"><%= today.project_name%></td>
-            <td class="project-work"><%= today.work_details%></td>
-            <td><%= today.start%></td>
-            <td><%= today.end%></td>
-            <td><%= today.total%></td>
-          </tr>
-          <%}) %>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <%if(checkTodayReportEmptyOrNot.length === 0){ %>
-    <div id="hidden-data">
-    <h5>Today's report is empty now !</h5>
-    </div>
-  <% } %>
-
-  <!-- Markup for current working user details -->
-
-  <%if(loggedInUser.userRole==='admin'){ %>
-
-  <div class="dashboard-info cnt-working-emy-list">
-
-    <h4 class="title-for-cnt-ely">Employees Working now ! </h4>
-    <div class="scroll-table">
-    <table class="table">
-      <thead>
-        <tr>
-          <td class="table-img td-width-zero"></td>
-          <td>Name</td>
-          <td class="user-phone">Date</td>
-          <td>Work Details</td>
-          <td class="user-email">Start Time</td>
-          <td class="user-status">End Time</td>
-        </tr>
-      </thead>
-      <tbody>
-        <% isEndTimeNull.map(user=>{%>
-        <tr>
-          <td class="table-img td-width-zero">
-            <% if(user.avatar !== null && user.avatar.match(/^(http|https):/g)){
-          %>
-          <img src="<%= user.avatar%>" />
-          <%} else{%>
-          <img
-            src="/uploads/avatars/<%=user.avatar != null ?  user.avatar : 'demo-avatar.png' %>"
-          />
-          <% } %>
-          </td>
-          <td>
-            <div class="username"><%=user.name%></div>
-            <span id="role"><%= user.userRole==='admin'? 'admin' : ''%> </span>
-          </td>
-          <td class="user-date "><input class="get-date" name="date" type="text" value=" <%= user.curDate %>"></td>
-          <td > <%= user.work_details %></td>
-          <td class="user-phone"><input type="text" class="update-start-time-val" name="startDate" value="<%= user.minStartTime %>"></td>
-          <td class="user-end-time">  <input type="text" name="endTime" class="update-end-time-val" value="<%= user.endTime || 'Empty' %>"></td>
-          <input type="hidden" name="userId" class="userId" value="<%= user.userId %>" />
-          </td>
-
-
-          <td class="btn-group">
-            <button class="update-btn">Update</button>
-            <button class="update-start-time ">Start</button>
-            <button class="update-end-time ">End</button>
-            <button class="save-btn">Save</button>
-            <button class="save-btn-for-end-time">Save</button>
-            <button type="text" class="opt-cancel-btn">Cancel</button>
-
-          </td>
-            
-        </tr>
-
-        <%}) %>
-      </tbody>
-    </table>
-  </div>
-  </div>
-  <%} %>
-
 </div>
- 
-  <script src="<%=baseUrl%>/js/startData.js"></script>
-  <script src="<%=baseUrl%>/js/dashboard.js"></script>
-
- <%- include("../partials/footer.ejs"); -%>
+<%- include("../partials/footer"); -%>
