update side nav

--- a/views/partials/side-nav.ejs
+++ b/views/partials/side-nav.ejs
@@ -9,7 +9,7 @@
   }
   .hidden{
     transform:translate(9999px);
-  opacity: 0;
+    opacity: 0;
   }
   .sub-options a {
     text-decoration: none;
@@ -22,10 +22,10 @@
     border-radius: 10px;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
-    padding: 8px 5px;
-    margin: 5px;
+    padding: 5px;
+    margin: 8px;
     transition: ease-in-out 1.2;
   }
   .sub-options .nav-li:hover {
